# embedded-test-stand

./: .gitignore  LICENSE.md  README.md
.github/workflows/: rust.yml
firmware-lib/: Cargo.toml
firmware-lib/src/: error.rs  lib.rs  pin_interrupt.rs  receive.rs  send.rs  usart.rs
firmware-lib/src/usart/: rx.rs  tx.rs
host-lib/: Cargo.toml  README.md
host-lib/src/: config.rs  conn.rs  error.rs  lib.rs  pin.rs  pins.rs  receive.rs  send.rs  serial.rs  target.rs  test_stand.rs
lpc845-test-stand/: README.md
lpc845-test-stand/messages/: Cargo.toml
lpc845-test-stand/messages/src/: lib.rs
lpc845-test-stand/test-assistant/: Cargo.toml  README.md  dap-serial.cfg
lpc845-test-stand/test-assistant/.cargo/: config
lpc845-test-stand/test-assistant/src/: main.rs
lpc845-test-stand/test-suite/: Cargo.toml
lpc845-test-stand/test-suite/src/: assistant.rs  error.rs  lib.rs  test_stand.rs
lpc845-test-stand/test-suite/tests/: gpio.rs  spi.rs  timer-interrupt.rs
lpc845-test-stand/test-target/: Cargo.toml  README.md  dap-serial.cfg  openocd.cfg
lpc845-test-stand/test-target/src/: main.rs
messages/: Cargo.toml  README.md
messages/src/: lib.rs  pin.rs
protocol/: Cargo.toml
protocol/src/: pin.rs
scripts/: build.sh  clean.sh  outdated.sh  update.sh  upgrades.sh
stm32l4-test-stand/: README.md
stm32l4-test-stand/test-assistant/: .cargo  Cargo.toml  Embed.toml  README.md  src
stm32l4-test-stand/test-suite/: Cargo.toml
stm32l4-test-stand/test-suite/src/: error.rs  lib.rs  target.rs  test_stand.rs
stm32l4-test-stand/test-suite/tests/: adc.rs  gpio.rs  i2c.rs  pwm.rs  spi.rs  test.rs  timer-interrupt.rs  usart.rs
stm32l4-test-stand/test-target/: .gitignore  Cargo.toml  Embed.toml  memory.x
stm32l4-test-stand/test-target/.cargo/: config
stm32l4-test-stand/test-target/src/: main.rs
test-assistant/: Cargo.toml  Embed.toml
test-assistant/src/: main.rs
test-firmware/: Cargo.toml
test-firmware/.cargo/: config
test-firmware/src/: main.rs
test-lib/: Cargo.toml
test-lib/src/: firmware.rs  host.rs  lib.rs
test-lib/src/firmware/: receive.rs
test-stand-infra/firmware-lib/: Cargo.toml  README.md
test-stand-infra/firmware-lib/src/: pin_interrupt.rs  usart.rs
test-stand-infra/firmware-lib/src/usart/: rx.rs
test-stand-infra/host-lib/: Cargo.toml
test-stand-infra/host-lib/src/: assistant.rs  conn.rs  error.rs  lib.rs  pin.rs  test_stand.rs
test-stand-infra/protocol/: .gitignore  README.md
test-stand-infra/protocol/src/: lib.rs  pin.rs
test-suite/: Cargo.toml  README.md  test-stand.toml
test-suite/.github/workflows/: rust.yml
test-suite/src/: assistant.rs  config.rs  error.rs  lib.rs  result.rs  serial.rs  target.rs  test_stand.rs
test-suite/tests/: gpio.rs  i2c.rs  spi.rs  timer-interrupt.rs  usart.rs
test-target/: Cargo.toml  Embed.toml  dap-serial.cfg  openocd.cfg  openocd.gdb
test-target/.cargo/: config
test-target/src/: main.rs
