[package]
name    = "firmware-lib"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
heapless = "0.5.4"
nb       = "0.1.2"
postcard = "0.5.0"

[dependencies.lpc8xx-hal]
git      = "https://github.com/lpc-rs/lpc8xx-hal.git"
features = ["845"]

[dependencies.serde]
version          = "1.0.106"
default-features = false

[dependencies.void]
version          = "1.0.2"
default-features = false
