[package]
name    = "host-lib"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
lazy_static = "1.4.0"
postcard    = "0.4.3"
serde       = "1.0.104"
toml        = "0.5.6"

[dependencies.serialport]
version          = "3.3.0"
default-features = false # depends on libudev by default
