[package]
name    = "lpc845-test-firmware"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
cortex-m-rtfm        = "0.5.1"
cortex-m-semihosting = "0.3.5"
heapless             = "0.5.3"
panic-semihosting    = "0.5.3"

[dependencies.lpc845-test-lib]
version  = "0.1.0"
path     = "../test-lib"
features = ["firmware"]

[dependencies.lpc8xx-hal]
git      = "https://github.com/lpc-rs/lpc8xx-hal.git"
features = ["845m301jbd48", "845-rt"]

[dependencies.void]
version          = "1.0.2"
default-features = false


# Can be removed once this is merged:
# https://github.com/lpc-rs/lpc8xx-hal/pull/210
[patch."https://github.com/lpc-rs/lpc8xx-hal.git".lpc8xx-hal]
git    = "https://github.com/braun-embedded/lpc8xx-hal.git"
branch = "usart"


# Without any optimization, the test firmware can't quite keep up with the
# USART. Let's do some optimization in dev mode, so this works when executed
# with `cargo run`.
[profile.dev]
opt-level = "s"
