[package]
name    = "lpc845-test-lib"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
postcard = "0.4.3"

[dependencies.lpc8xx-hal]
git      = "https://github.com/lpc-rs/lpc8xx-hal.git"
features = ["845"]
optional = true

[dependencies.serde]
version          = "1.0.104"
default-features = false


[features]
firmware = ["lpc8xx-hal"]
host     = []
