[package]
name    = "lpc845-test-suite"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
lazy_static = "1.4.0"
toml        = "0.5.5"

[dependencies.lpc845-test-lib]
version  = "0.1.0"
path     = "../test-lib"
features = ["host"]

[dependencies.serde]
version  = "1.0.104"
features = ["derive"]

[dependencies.serialport]
version          = "3.3.0"
default-features = false # depends on libudev by default
