[package]
name    = "lpc845-messages"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies.protocol]
path = "../../test-stand-infra//protocol"

[dependencies.serde]
version          = "1.0.115"
default-features = false
features         = ["derive"]
