[package]
name    = "stm32l4-test-assistant"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
cortex-m-rtic = "0.5.5"
heapless      = "0.5.6"

[dependencies.lpc845-messages]
version  = "0.1.0"
path     = "../../lpc845-test-stand/messages"

[dependencies.firmware-lib]
version  = "0.1.0"
path     = "../../test-stand-infra/firmware-lib"

[dependencies.lpc8xx-hal]
git      = "https://github.com/lpc-rs/lpc8xx-hal.git"
features = ["845m301jbd48", "845-rt"]

[dependencies.panic-rtt-target]
version  = "0.1.1"
features = ["cortex-m"]

[dependencies.rtt-target]
version  = "0.3.0"
features = ["cortex-m"]

[dependencies.void]
version          = "1.0.2"
default-features = false


# Without any optimization, the test firmware can't quite keep up with the
# USART. Let's do some optimization in dev mode, so this works when executed
# with `cargo run`.
[profile.dev]
opt-level = "s"
