[package]
name    = "stm32l4-test-target"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
cortex-m      = "0.6.4"
cortex-m-rtic = "0.5.5"
heapless      = "0.5.6"
postcard      = "0.5.1"

[dependencies.lpc845-messages]
version  = "0.1.0"
path     = "../../lpc845-test-stand/messages"

[dependencies.stm32l4xx-hal]
git      = "https://github.com/stm32-rs/stm32l4xx-hal.git"
features = ["stm32l4x3", "rt"]

[dependencies.panic-rtt-target]
version  = "0.1.1"
features = ["cortex-m"]

[dependencies.rtt-target]
version  = "0.2.2"
features = ["cortex-m"]

[dependencies.void]
version          = "1.0.2"
default-features = false


# Without any optimization, the test firmware can't quite keep up with the
# USART. Let's do some optimization in dev mode, so this works when executed
# with `cargo run`.
[profile.dev]
opt-level = "s"
