[package]
name    = "firmware-lib"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"


[dependencies]
heapless = "0.7.0"
nb       = "1.0.0"
postcard = "0.7.0"

[dependencies.lpc8xx-hal]
version  = "0.9.0"
features = ["845"]

[dependencies.serde]
version          = "1.0.115"
default-features = false

[dependencies.void]
version          = "1.0.2"
default-features = false
